centered the twitter iframe

--- a/GiveCamp/Twitter.html
+++ b/GiveCamp/Twitter.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
 </head>
-<body>
+<body style="margin:0; padding:0;">
     <script type="text/javascript" src="http://widgets.twimg.com/j/2/widget.js"></script>
 <script type="text/javascript">// <![CDATA[
     new TWTR.Widget({
